[gd_scene load_steps=3 format=3 uid="uid://dwr37gqj430l"]

[ext_resource type="Script" uid="uid://ckdcei4wxlj3w" path="res://ui/next_level_ui.gd" id="1_ghe8y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_txqdg"]
bg_color = Color(0, 0, 0, 0.5)

[node name="NextLevelUi" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ghe8y")

[node name="BackgroundNextLevel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_txqdg")

[node name="VBoxContainerNextLevel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 476.0
offset_top = 274.0
offset_right = 676.0
offset_bottom = 374.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainerNextLevel"]
layout_mode = 2
text = "Completaste el nivel"

[node name="NextLevelButton" type="Button" parent="VBoxContainerNextLevel"]
layout_mode = 2
text = "Siguiente Nivel"

[node name="MainMenuButton" type="Button" parent="VBoxContainerNextLevel"]
layout_mode = 2
text = "Men√∫ Principal"
